# RAGAgent

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.trae/rules/: abstraction-interface.mdc  ant-design-vue.mdc  async-conventions.mdc  background-tasks.mdc  config-management.mdc  domain-model.mdc  exception-handling.mdc  fastapi-conventions.mdc  frontend-api-client.mdc  frontend-sse.mdc  frontend-task-batch.mdc  frontend-ui.mdc  git-commit.mdc  layered-architecture.mdc  logging-trace.mdc  persistence-conventions.mdc  prompt-template.mdc  python-coding.mdc  sse-streaming.mdc  task-batch.mdc  testing.mdc  vue-conventions.mdc
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
configs/: config.yaml
configs/prompts/: answer-chat-kb.txt  context-format.txt
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT_WORKFLOW.md  FRONTEND_ACCEPTANCE_CRITERIA.md  FRONTEND_API_CONTRACT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_TASK_PLAN.md  FRONTEND_UI_SPEC.md  INTERFACES.md  MVP_PLAN.md  PROJECT_SPEC.md  THIRD_PARTY_NOTICES.md  YUXI_PARITY_STATUS.md
scripts/: fix_archived_kb_names.sql  mock_openai_server.py
src/ragent/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_chat_sse.py  test_api_kb_documents.py  test_db_session.py  test_e2e_chat.py  test_pipeline.py  test_vector_store.py
tests/unit/: __init__.py  test_chunker.py  (+15 more)
web/: AGENTS.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+156 files in other folders)
