[project]
name = "ragent"
version = "0.1.0"
description = "Ragent-Py: Python 复刻版企业级 Agentic RAG 平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "structlog>=24.4.0",
    "sse-starlette>=2.1.0",
    "pymilvus>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragent"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in default args is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["ragent"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
packages = ["src/ragent"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["pymilvus.*", "sse_starlette.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.uv]
package = true
